{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 37,
  "lineage": "8362f7c2-3b2b-b004-a29e-ec7763185721",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251002",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/uicode-459223/zones/us-central1-a/disks/web-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-10-08T07:54:40.007-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/uicode-459223/zones/us-central1-a/instances/web-server-1",
            "instance_id": "4358297094349112768",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCwFmdOVkJ3ZTDjBhcRIB1dMKkfLPwyIxDXDnvRIT2X8UXM3SGwpDR8qx1/RzZwPzjMAoCS/5ukEZukVvn0Wa3SzjRlaRpUwPbrSnjvjtni56PVcKNKu87ErN8+LsoUOuhIUuzHPwhYvrlv2imAAHoODjSsaa135j6ETq7gh6KbfiibkSNqeW8ASnLA0k58w1E51pb4DQ7HL77u7f/hT593xvgiwi+rvU6G1ZJvwdp7uaVfs30P7/JrNAg1r23Iv9ef5Z4Gq1px7h8PsiM/jiiL+fIKENV18p1bz4p+IWddsYdCPwkNDbcROjfDXZ5ZUNTfEvumQQWMbozncrqzRVpMe7HqbXvO6oNm6o/iqZL6Mt2mqZiqS7I/bXFKvWx2v8MHMnTMSAxDJzOXfZUBg+1QtxDLCubKWr8wlwg3dVKbnH [...]
            },
            "metadata_fingerprint": "GdzoL_XZKSI=",
            "name": "web-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.165.90",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/networks/web-app-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/uicode-459223/regions/us-central1/subnetworks/web-app-subnet",
                "subnetwork_project": "uicode-459223"
              }
            ],
            "project": "uicode-459223",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uicode-459223/zones/us-central1-a/instances/web-server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-server"
            ],
            "tags_fingerprint": "Fcv0aJ--8z8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "module.compute.data.google_compute_image.ubuntu",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-08T07:54:27.353-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uicode-459223/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/networks/web-app-vpc",
            "params": [],
            "priority": 1000,
            "project": "uicode-459223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/uicode-459223/global/networks/web-app-vpc",
            "mtu": 0,
            "name": "web-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1854467010596685282",
            "numeric_id": "1854467010596685282",
            "project": "uicode-459223",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/networks/web-app-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-08T07:54:27.524-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/uicode-459223/regions/us-central1/subnetworks/web-app-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "web-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/networks/web-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "uicode-459223",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uicode-459223/regions/us-central1/subnetworks/web-app-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 589161454692451788
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "cloudrun_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-10-08T08:26:48.254-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "sN7rOwdyzcg=",
            "generated_id": 1080059388943350871,
            "id": "projects/uicode-459223/global/backendServices/cloudrun-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "cloudrun-backend",
            "port_name": "http",
            "project": "uicode-459223",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/securityPolicies/block-ip-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/backendServices/cloudrun-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.security.google_compute_security_policy.block_ip_policy"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "block_ip_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Política de Cloud Armor para bloquear IP específica",
            "fingerprint": "-PbPD7YazCg=",
            "id": "projects/uicode-459223/global/securityPolicies/block-ip-policy",
            "name": "block-ip-policy",
            "project": "uicode-459223",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Permitir todo el tráfico restante",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Bloqueo de IP específica",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "1.2.3.4"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uicode-459223/global/securityPolicies/block-ip-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}